--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 				  <extensions>true</extensions>
 				  <configuration>
 				    <cloudHubDeployment>
+				      <objectStoreV2>true</objectStoreV2>
 				      <uri>https://anypoint.mulesoft.com</uri>
 				      <muleVersion>${app.runtime}</muleVersion>
 				      <username>${username}</username>
